--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,13 @@ body {
   background-color: #fafafa;
 }
 
+ul {
+	padding-left: 0;
+}
+
 p {
   margin: 0 14px 20px;
-  font-size: 1.2em;
+  font-size: 1.1em;
 }
 
 h1 {
@@ -33,7 +37,7 @@ h2 {
 	text-transform: uppercase;
 	padding: 30px;
 	margin: 0 auto;
-	font-size: 1.2em;
+	font-size: 1em;
 	color: #444;
 }
 
@@ -42,6 +46,26 @@ h3 {
 	font-weight: 400;
 	color: #444;
 	margin-bottom: .5em;
+}
+
+footer {
+	width: 80%;
+	border-top: 1px solid #ddd;
+	margin: 1em auto 1em;
+	font-weight: bold;
+	color: #444;
+	padding-bottom: 1.5em;
+	padding-top: 0.5em;
+}
+
+footer ul {
+	list-style: none;
+}
+
+footer li a{
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #444;
 }
 
 /**************************
@@ -82,6 +106,29 @@ LAYOUT STYLES
 
 .projects {
 	background-color: white;
+	padding-bottom: 1em;
+}
+
+.caption {
+	margin-bottom: 50px;
+}
+
+.contactinfo {
+	padding-bottom: 1em;
+}
+
+.contactdata {
+	font-weight: bold;
+	padding-left: .7em;
+}
+
+.footer-name {
+	float: left;
+}
+
+.top-link {
+	float: right;
+	font-size: .9em;
 }
 
 /**************************
