Styling 768px design and playing with Flexbox styling for footer nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,38 @@ BASE STYLES
   box-sizing: border-box;
 }
 
+nav {
+	display: block;
+	margin: 4px 0;
+}
+
+nav ul {
+	list-style: none;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-size: 1.1em;
+	padding: 8px;
+}
+
+nav li {
+	margin: 8px 0;
+	background-color: white;
+	padding: 12px 0;
+}
+
+nav li a {
+	text-decoration: none;
+}
+
+nav li a:active, a:visited {
+	color: #222;
+}
+
+nav li a:hover {
+	color: orange;
+	border-bottom: 2px dotted orange;
+}
+
 img {
   max-width: 90%;
 }
@@ -48,10 +80,15 @@ h3 {
 	margin-bottom: .5em;
 }
 
+h4 {
+	float: left;
+	margin-top: -0.1em;
+}
+
 footer {
 	width: 80%;
 	border-top: 1px solid #ddd;
-	margin: 0 auto 1em;
+	margin: 2px auto 1em;
 	font-weight: bold;
 	color: #444;
 	padding-bottom: 1.5em;
@@ -66,43 +103,12 @@ footer li a{
 	text-transform: uppercase;
 	text-decoration: none;
 	color: #444;
+	float: right;
 }
 
 /**************************
 LAYOUT STYLES
 **************************/
-
-nav {
-	display: block;
-	margin: 4px 0;
-}
-
-nav ul {
-	list-style: none;
-	text-transform: uppercase;
-	font-weight: 700;
-	font-size: 1.1em;
-	padding: 8px;
-}
-
-nav li {
-	margin: 8px 0;
-	background-color: white;
-	padding: 12px 0;
-}
-
-nav li a {
-	text-decoration: none;
-}
-
-nav li a:active, a:visited {
-	color: #222;
-}
-
-nav li a:hover {
-	color: orange;
-	border-bottom: 2px dotted orange;
-}
 
 .profile img {
 	width: 75%;
@@ -137,16 +143,106 @@ nav li a:hover {
 	padding-left: .7em;
 }
 
-.footer-name {
-	float: left;
-}
-
 .top-link {
 	float: right;
 	font-size: .9em;
 }
 
+.foot-nav {
+	display: none;
+}
+
 /**************************
 MEDIA QUERIES
 **************************/
+
+@media (min-width: 768px) {
+	nav {
+		display: inline;
+	}
+
+	nav li {
+		background-color: transparent;
+		display: inline-block;
+		padding-left: 1em;
+		padding-right: 1em;
+
+	}
+
+	li {
+		list-style: none;
+	}
+
+	.profile {
+		width: 95%;
+		margin: 0 auto;
+	}
+
+	.profile p {
+		text-align: left;
+		font-size: 1.2em;
+		line-height: 1.5em;
+	}
+
+	.profile img {
+		float: right;
+		width: 40%;
+		padding-left: 1em;
+	}
+
+	.portfolio h2 {
+		background-color: white;
+	}
+
+	.projects {
+		background-color: white;
+		margin-top: 0;
+		padding-top: 0;
+	}
+
+	.projects ul {
+		text-decoration: none;
+	}
+
+	.projects li {
+		width: 50%;
+		float: left;
+	}
+
+	.foot-name {
+		display: flex;
+		flex-direction: column;
+		margin-right: auto;
+	}
+
+	.top-link {
+		display: none;
+	}
+
+	.foot-nav {
+		display: flex;
+		flex-direction: column;
+		align-self: left;
+		justify-content: space-between;
+	}
+
+	.clearfix::after {
+	    content: "";
+	    display: table;
+	    clear: both;
+  	}
+}
+
+@media (min-width: 1024px) {
+	.projects li {
+		width: 28.3333%;
+	}
+
+	.clearfix::after {
+	    content: "";
+	    display: table;
+	    clear: both;
+  }
+}
+
 
